save messages to db
